--- a/PROJECT-RENENUE/index.html
+++ b/PROJECT-RENENUE/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="page">
-      <img src="./assets/main-image.png" alt="Imagem do Capcake" />
+      <img src="./assets/main-image.jpg" alt="Imagem do Capcake" />
 
       <main>
         <section id="about">
