--- a/PROJECT-RENENUE/index.html
+++ b/PROJECT-RENENUE/index.html
@@ -79,10 +79,9 @@
           </p>
         </section>
       </main>
-
-      <footer>
-        <p>Feito com <i class="ph ph-heart"></i> por Francisco Neto</p>
-      </footer>
-    </div>  
+    </div>
+    <!-- <footer>
+      <p>Feito com <i class="ph ph-heart"></i> por Francisco Neto</p>
+    </footer> -->
   </body>
 </html>
