--- a/PROJECT-RENENUE/index.html
+++ b/PROJECT-RENENUE/index.html
@@ -77,8 +77,8 @@
         </section>
       </main>
     </div>
-    <!-- <footer>
-      <p>Feito com <i class="ph ph-heart"></i> por Francisco Neto</p>
-    </footer> -->
+    <footer>
+      <p>Feito com <i class="ph ph-heart heart"></i> por Francisco Neto</p>
+    </footer>
   </body>
 </html>
