--- a/PROJECT-NOTICIAS/index.html
+++ b/PROJECT-NOTICIAS/index.html
@@ -10,8 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Alo</h1>
-    <h2>Sub</h2>
-    <a href="">teste</a>
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <div>
+                <img src="./assets/List.svg" alt="ícone do menu">
+                <strong>Menu</strong>
+            </div>
+
+            <div>
+                <img src="./assets/Logo.svg" alt="TechNews Logo">
+            </div>
+
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/MagnifyingGlass.svg" alt="ícone de lupa para busca">
+            </div>
+        </nav>
+        <nav id="secondary" class="grid grid-flow-col">
+            <a href="#">Inteligência Artificial</a>
+            <a href="#">Blockchain</a>
+            <a href="#">Hologramas</a>
+            <a href="#">Internet</a>
+            <a href="#">Vestíveis</a>
+            <a href="#">Realidade Aumentada</a>
+            <a href="#">Realidade  Virtual</a>
+        </nav>
+    </header>
 </body>
 </html>
