--- a/PROJECT-NOTICIAS/index.html
+++ b/PROJECT-NOTICIAS/index.html
@@ -38,10 +38,12 @@
     </header>
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
-            <img src="assets/Image 01.png" alt="">
+            <div class="card">
+                <img src="assets/Image 01.png" alt="">
+            </div>
 
             <div class="grid grid-cols-2 gap-16">
-                <div>
+                <div card>
                     <img src="assets/Image 02.png" alt="">
                 </div>                
 
