Aplicando estilos na seção das mais lidas da semana

--- a/PROJECT-NOTICIAS/index.html
+++ b/PROJECT-NOTICIAS/index.html
@@ -99,7 +99,7 @@
                 <figure>
                     <span class="content-tag">Veículos</span>
                     <img src="assets/Image 06.png" alt="">
-                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</p>
+                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
                 </figure>
 
                 <figure>
