--- a/PROJECT-NOTICIAS/index.html
+++ b/PROJECT-NOTICIAS/index.html
@@ -210,8 +210,7 @@
               <span class="content-tag">Inteligência Artificial</span>
               <h3 class="text-xl">
                 Criados para auxiliar idosos, robôs de companhia ganham
-                popularidade, oferecendo suporte emocional e físico aos
-                usu...
+                popularidade, oferecendo suporte emocional e físico aos usu...
               </h3>
               <p>
                 A tecnologia não só avança, mas também busca tornar a vida mais
@@ -248,7 +247,7 @@
         </div>
       </section>
 
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/Ads.png" alt="" />
         </div>
@@ -264,67 +263,72 @@
 
           <div class="grid gap-32">
             <article class="grid grid-flow-col gap-16">
-                <div>
-                    <img src="assets/Image 14.png" alt="" />
-                </div>
-                <div>
-                  <span class="content-tag">Software</span>
-                  <h3 class="text-xl">
-                    Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
-                  </h3>
-                </div>                
+              <div>
+                <img src="assets/Image 14.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Software</span>
+                <h3 class="text-xl">
+                  Aplicativo de monitoramento ambiental ganha destaque,
+                  incentivando práticas ecológicas e pro...
+                </h3>
+              </div>
             </article>
 
             <article class="grid grid-flow-col gap-16">
-                <div>
-                    <img src="assets/Image 15.png" alt="" />
-                </div>
-                <div>
-                  <span class="content-tag">Realidade Virtual</span>
-                  <h3 class="text-xl">
-                    Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
-                  </h3>
-                </div>                
+              <div>
+                <img src="assets/Image 15.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Realidade Virtual</span>
+                <h3 class="text-xl">
+                  Óculos de realidade virtual com feedback tátil proporcionam
+                  uma experiência sensorial complet...
+                </h3>
+              </div>
             </article>
 
             <article class="grid grid-flow-col gap-16">
-                <div>
-                    <img src="assets/Image 16.png" alt="" />
-                </div>
-                <div>
-                  <span class="content-tag">Criptomoedas</span>
-                  <h3 class="text-xl">
-                    Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o im...
-                  </h3>
-                </div>                
+              <div>
+                <img src="assets/Image 16.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Criptomoedas</span>
+                <h3 class="text-xl">
+                  Surge uma nova moeda digital baseada em tecnologias
+                  sustentáveis, buscando minimizar o...
+                </h3>
+              </div>
             </article>
 
             <article class="grid grid-flow-col gap-16">
-                <div>
-                    <img src="assets/Image 17.png" alt="" />
-                </div>
-                <div>
-                  <span class="content-tag">Drones</span>
-                  <h3 class="text-xl">
-                    Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
-                  </h3>
-                </div>                
+              <div>
+                <img src="assets/Image 17.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Drones</span>
+                <h3 class="text-xl">
+                  Empresas de e-commerce implementam frota de drones para
+                  entregas rápidas, transformando o ce...
+                </h3>
+              </div>
             </article>
 
             <article class="grid grid-flow-col gap-16">
-                <div>
-                    <img src="assets/Image 18.png" alt="" />
-                </div>
-                <div>
-                  <span class="content-tag">Impressão 3d</span>
-                  <h3 class="text-xl">
-                    Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
-                  </h3>
-                </div>                
+              <div>
+                <img src="assets/Image 18.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Impressão 3d</span>
+                <h3 class="text-xl">
+                  Tecnologia inovadora permite a impressão 3D de órgãos humanos,
+                  revolucionando a medicina e a li...
+                </h3>
+              </div>
             </article>
           </div>
         </section>
-      </div>
+      </aside>
     </main>
   </body>
 </html>
